--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
         <div class="wrapper">
             <img src="/gfx/logo.png">
             <span>Twitter Clone</span>
+            <%= link_to "Public Ribbits", ribbits_path %>
             <% if current_user %>
     			<%= link_to "Log Out", sessions_destroy_path %>
 			<% else %>
