Added buddies page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
             <img src="/gfx/logo.png">
             <span>Twitter Clone</span>
             <%= link_to "Public Ribbits", ribbits_path %>
+            -
+            <%= link_to "Public Profiles", users_path %>
+            -
+            <%= link_to "Buddies' Ribbits", buddies_path %>
+            -
+			<%= link_to "My Profile", current_user %>
             <% if current_user %>
     			<%= link_to "Log Out", sessions_destroy_path %>
 			<% else %>
